# salsa

./: .gitignore  AGENTS.md  CONVERT.md  Cargo.toml  README.md  findings.md
.devcontainer/: devcontainer.json
src/: auth.rs  main.rs  provider.rs  tools.rs
src/agent/: cron_scheduler.rs  mod.rs  provider.rs  summaries.md  worker.rs
src/api/: codex.rs  local.rs  mod.rs
src/app/: mod.rs
src/auth/: mod.rs
src/config/: mod.rs
src/models/: mod.rs
src/tools/: agent.rs  analysis.rs  brief.rs  cron.rs  media.rs  mod.rs  plan_mode.rs  sandbox.rs  skills.rs  tasks.rs  team.rs  todo.rs  web.rs
src/ui/: mod.rs  theme.rs  ui.rs
