[package]
name = "salsa"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.30", features = ["crossterm"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
polars = { version = "0.46", default-features = false, features = ["fmt", "lazy", "csv", "parquet", "json"] }
